--- a/config/database.yml
+++ b/config/database.yml
@@ -10,9 +10,5 @@ development:
   <<: *default
   database: osso-development
 test:
-  adapter: postgresql
-  encoding: unicode
-  pool: 5
+  <<: *default
   database: osso-test
-  host: ''
-  port: 5432
