--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "cypress:open": "cypress open",
     "cypress:ci": "start-server-and-test 'RACK_ENV=test bundle exec rackup -p 9292' http-get://localhost:9292/health 'yarn cypress run'",
     "start": "yalc add @enterprise-oss/osso && parcel serve ./client/src/index.tsx",
-    "build": "NODE_ENV=production parcel build ./client/src/index.tsx --dist-dir ./public --log-level=verbose --no-cache",
+    "build": "parcel build ./client/src/index.tsx --dist-dir ./public --log-level=verbose",
     "typecheck": "tsc --noEmit -p client",
     "clean": "rm -rf client/dist && rm -rf .parcel-cache && rm -rf public/*",
     "test": "jest",
