--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "license": "SEE LICENSE IN LICENSE",
-  "main": "public/index.js",
   "scripts": {
     "start-server": "bundle exec rackup -p 9292",
     "cypress:open": "cypress open",
     "cypress:ci": "start-server-and-test 'RACK_ENV=test bundle exec rackup -p 9292' http-get://localhost:9292/health 'yarn cypress run'",
     "start": "yalc add @enterprise-oss/osso && parcel serve ./client/src/index.tsx",
-    "build": "parcel build ./client/src/index.tsx --dist-dir ./public --log-level=verbose",
+    "build": "yarn parcel build ./client/src/index.tsx --dist-dir ./public --log-level=verbose",
     "typecheck": "tsc --noEmit -p client",
     "clean": "rm -rf client/dist && rm -rf .parcel-cache && rm -rf public/*",
     "test": "jest",
