--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -2,7 +2,7 @@ steps:
 
   - commands: 
     - "bundle install"
-    - "bundle exec rake db:migrate"
+    - "RSCK_ENV=test bundle exec rake db:migrate"
     - "bundle exec rspec"
     label: ":rspec:"
   
