--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -30,6 +30,7 @@ steps:
   - wait
 
   - commands: 
+      - bundle exec rake db:reset
       - "yarn install"
       - "yarn build"
       - "yarn cypress:ci"
