--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -2,8 +2,8 @@ steps:
 
   - commands: 
     - "bundle install"
-    - "be rake db:drop"
-    - "be rake db:create"
+    - "bundle exec rake db:drop"
+    - "bundle exec rake db:create"
     - "RACK_ENV=test bundle exec rake db:migrate"
     - "bundle exec rspec"
     label: ":rspec:"
