--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -2,6 +2,8 @@ steps:
 
   - commands: 
     - bundle install
+    - bundle exec rake db:drop
+    - bundle exec rake db:create
     - RACK_ENV=test bundle exec rake db:migrate
     - bundle exec rspec
     label: ":rspec:"
