--- a/package.json
+++ b/package.json
@@ -60,8 +60,9 @@
     "@ant-design/colors": "^4.0.5",
     "@ant-design/icons": "^4.2.2",
     "@apollo/client": "^3.1.3",
-    "@enterprise-oss/osso": "file:.yalc/@enterprise-oss/osso",
+    "@enterprise-oss/osso": "^0.0.5-alpha.37",
     "antd": "^4.5.3",
+    "date-fns": "^2.15.0",
     "fast-xml-parser": "^3.17.4",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
